Make migration harness 'Send'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ default-features = false
 version = "~0.3.0"
 default-features = false
 
+[dependencies.tokio]
+version = "~1.28.2"
+features = ["io-util", "sync"]
+
 [features]
 default = []
 postgres = ["diesel-async/postgres"]
